--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = babycareapp2
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.babycareapp2
+PRODUCT_BUNDLE_IDENTIFIER = com.babycareapp2
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.babycareapp2 All rights reserved.
