--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,50 @@
 name: babycareapp2
-description: "Baby Care App - CI/CD Ready Skeleton"
+description: "A comprehensive baby care tracking app for new parents"
 publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.10.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  
+  # State Management
+  flutter_riverpod: ^2.4.9
+  
+  # Local Storage
+  path_provider: ^2.1.5
+  shared_preferences: ^2.2.3
+  
+  # Notifications
+  flutter_local_notifications: ^15.1.3
+  
+  # Permissions
+  permission_handler: ^11.0.1
+  
+  # Share/Export
+  share_plus: ^7.2.1
+  
+  # Date/Time
+  intl: ^0.18.1
+  
+  # UI Icons
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  
+  flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
+  
+  # Testing
+  test: ^1.24.0
+  mockito: ^5.4.2
+  build_runner: ^2.4.7
 
 flutter:
   uses-material-design: true
